<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter amount"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/splitNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Split between how many people?"
        android:inputType="textLongMessage|number" />

    <Button
        android:id="@+id/tenPercent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="10%"/>

    <Button
        android:id="@+id/fifteenPercent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="15%"/>

    <Button
        android:id="@+id/twentyPercent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="20%"/>

    <Button
        android:id="@+id/twentyfivePercent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="25%"/>

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Tip value:" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_gravity="left"
        android:layout_height="50dp"
        android:text="Tip Value"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total + tip:" />

    <TextView
        android:id="@+id/tipAndTotalView"
        android:layout_width="match_parent"
        android:layout_gravity="left"
        android:layout_height="50dp"
        android:text="Tip Value"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total each:" />

    <TextView
        android:id="@+id/totalView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Total"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

</LinearLayout>
